--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,11 @@
 body {
     background-color: var(--primary-white-color);
     color: var(--primary-text-color);
+
+    font-family: Roboto, sans-serif;
+    font-size: 14px;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
 }
 
 /* сброс стилей */
@@ -40,8 +45,14 @@ body {
 
 /* шапка сайта */
 
+/* логотип */
 .logo {
     color: var(--title-text-color);
+    font-family: Raleway, sans-serif;
+  
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.2;    
 }
 
 .logo:hover,
@@ -52,7 +63,6 @@ body {
 .web-color {
     color: var(--accent-color);
 }
-
 
 /* навигация */
 .nav-link {
@@ -80,24 +90,36 @@ body {
 /* hero */
 .hero-title {
     color: var(--title-text-color);
-}
 
-/* a.hero-wish:hover,
-a.hero-wish:focus {
-    color: var(--primary-text-color);
-} */
+    font-family: Roboto, sans-serif;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;    
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+}
 
 /* section */
 .section .section-title {
     color: var(--title-text-color);
+
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;      
 }
 
 /* 2nd section Features of work */
 .features .title {
     color: var(--title-text-color);
+
+    font-weight: 700;    
+    line-height: 1.14;    
+    text-transform: uppercase;
 }
 
-.features-img:hover {
+.features .features-img:hover {
     background-color: var(--accent-color);
 }
 
@@ -105,17 +127,62 @@ a.hero-wish:focus {
 .scope .title {
     background-color: var(--bg-color);
     color: var(--primary-white-color);
+
+    font-weight: 700;    
+    line-height: 1.14;    
+    text-transform: uppercase;
 }
 
 /* 4d section Our team */
 .team .title {
     color: var(--title-text-color);
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.2;
+    text-align: center;
+}
+
+.team .profession {
+    color: var(--primary-text-color);
+    
+    font-size: 16px;
+    line-height: 1.2;
+    text-align: center;
+}
+
+.team .social-link {
+    color: var(--primary-text-color);
+
+    text-decoration-line: none;    
+}
+
+.team .social-link:hover, 
+.team .social-link:focus {
+    color: var(--accent-color);
+}
+
+/* 5d section Clients */
+/* НЕ РАБОТАЕТ ХОВЕР */
+.clients .client-logo:hover {
+    color: var(--accent-color);
 }
 
 /* button*/
 .button {
     background-color: var(--primary-white-color);
     color: var(--primary-text-color);
+
+   
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1,88;
+    /* align-items: center; */
+    text-align: center;
+    letter-spacing: 0.06em;
+
+    /* font-style: inherit; */
+    text-decoration: none;
 }
 
 .button.primary {
@@ -126,4 +193,30 @@ a.hero-wish:focus {
 .button.secondary {
     background-color: var(--primary-white-color);
     color: var(--accent-color);
+}
+
+/* footer */
+
+footer {
+    background-color: #2F303A;
+}
+
+.logo-style .logo {
+    color: var(--primary-white-color);
+}
+
+address {
+    color: var(--primary-white-color);
+}
+
+address > a {
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.action {
+    color: var(--primary-white-color);
+
+    font-weight: 700;    
+    line-height: 1.14;    
+    text-transform: uppercase;
 }
