--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
+html {
+    box-sizing: border-box;    
+}
+
+*, 
+*::before, 
+*::after {
+    box-sizing: inherit;
+}
+
 /* цвет основного фона #FFFFFF */
 /* вторичный цвет фона #F5F4FA */
 
@@ -17,6 +27,10 @@
 }
 
 body {
+    
+    /* outline: 5px solid orange; */
+
+
     background-color: var(--primary-white-color);
     color: var(--primary-text-color);
 
@@ -169,7 +183,15 @@ body {
 }
 
 /* button*/
+.button-icon {
+    height: 5px;
+    width: 5px;
+    background-color: lightcoral;
+}
+
 .button {
+    /* display: inline-block; */
+    
     background-color: var(--primary-white-color);
     color: var(--primary-text-color);
 
@@ -255,3 +277,4 @@ address > a {
     font-size: 18px;
     line-height: 1.6;
 }
+
