--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,3 @@
-html {
-    box-sizing: border-box;    
-}
-
-*, 
-*::before, 
-*::after {
-    box-sizing: inherit;
-}
-
 /* цвет основного фона #FFFFFF */
 /* вторичный цвет фона #F5F4FA */
 
@@ -26,9 +16,20 @@ html {
     --accent-color: #2196F3;
 }
 
+/* подключен modern-normalize.css */
+/* html {
+    box-sizing: border-box;    
+}
+
+*, 
+*::before, 
+*::after {
+    box-sizing: inherit;
+} */
+
 body {
-    
-    /* outline: 5px solid orange; */
+    margin: 0;
+    /* outline: 1px solid orange; */
 
 
     background-color: var(--primary-white-color);
@@ -42,7 +43,10 @@ body {
 
 /* сброс стилей */
 .list {
-    list-style: none;
+    padding: 0;
+    margin: 0;
+
+    list-style: none;    
 }
 
 .link {
@@ -50,6 +54,13 @@ body {
 }
 
 .hidden {
+    display: inline-block;
+    margin: 0;
+    padding: 0;   
+
+    font-size: 0;    
+    height: 0;
+
     visibility: hidden;
 }
 
@@ -58,6 +69,19 @@ body {
 }
 
 /* шапка сайта */
+
+.conteiner {    
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;  
+    margin-bottom: 94px;
+    padding-left: 20px;
+    padding-right: 20px;
+     
+    width: 1170px;
+    
+    outline: 1px solid crimson;        
+}
 
 /* логотип */
 .logo {
@@ -79,7 +103,11 @@ body {
 }
 
 /* навигация */
+
 .nav-link {
+    margin-top: 0;
+    margin-bottom: 0;
+
     color: var(--title-text-color);
 }
 
@@ -93,6 +121,9 @@ body {
 }
 
 .auth-link {
+    margin-top: 0;
+    margin-bottom: 0;
+
     color: var(--primary-text-color);
 }
 
@@ -101,21 +132,52 @@ body {
     color: var(--accent-color);
 }
 
-/* hero */
+/* hero  оформляем потом */
+.hero {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 94px;    
+    width: 1600px;
+    height: 600px;    
+
+    text-align: center;
+
+    outline: 1px solid crimson;
+}
+
 .hero-title {
+    display: inline-block;
+    margin: 200px 452px 30px 452px;
+    width: 696px;
+    height: 120px;
+    
     color: var(--title-text-color);
 
     font-family: Roboto, sans-serif;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;    
-    text-align: center;
+    /* text-align: center; */
     letter-spacing: 0.06em;
     text-transform: uppercase;
 }
 
 /* section */
-.section .section-title {
+.section {
+    margin-top: 0;
+    margin-bottom: 0;  
+    padding-bottom: 94px;    
+    /* scroll-padding-top: 0; */
+    
+    /* background-color: lightblue; */
+}
+
+.section .section-title {        
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
+       
     color: var(--title-text-color);
 
     font-weight: 700;
@@ -125,7 +187,7 @@ body {
 }
 
 /* 2nd section Features of work */
-.features .title {
+.features .title {    
     color: var(--title-text-color);
 
     font-weight: 700;    
@@ -148,6 +210,11 @@ body {
 }
 
 /* 4d section Our team */
+section.padding {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
 .team .title {
     color: var(--title-text-color);
 
@@ -183,38 +250,50 @@ body {
 }
 
 /* button*/
-.button-icon {
-    height: 5px;
-    width: 5px;
-    background-color: lightcoral;
+ .auth .button-icon {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px;
+    margin-bottom: 0;
+    height: 15px;
+    width: 15px;
+
+    background-color: var(--accent-color);
 }
 
 .button {
-    /* display: inline-block; */
+    display: inline-block;    
+    border-radius: 4px;
+    min-width: 200px;    
+    border: 1px solid transparent;
+    border-color: var(--accent-color);        
     
-    background-color: var(--primary-white-color);
-    color: var(--primary-text-color);
+    background-color: var(--accent-color);
+    color: var(--primary-white-color);
 
-   
     font-weight: 700;
     font-size: 16px;
-    line-height: 1,88;
-    /* align-items: center; */
-    text-align: center;
+    line-height: 1,88;    
+    
     letter-spacing: 0.06em;
 
     /* font-style: inherit; */
     text-decoration: none;
 }
 
-.button.primary {
-    background-color: var(--accent-color);
-    color: var(--primary-white-color);
+.button.primary {    
+    padding: 10px 30px;
+    margin: 30px 700px 200px 700px;  
+    scroll-margin-bottom: 200px;
+    
+    /* text-align: center; */
 }
 
-.button.secondary {
-    background-color: var(--primary-white-color);
-    color: var(--accent-color);
+.button.secondary {     
+    padding: 10px 10px 10px 29px;
+    margin: 108px 216px 94px 1184px;
+
+    text-align: center;        
 }
 
 /* footer */
@@ -278,3 +357,13 @@ address > a {
     line-height: 1.6;
 }
 
+.icon {
+    display: inline-block;
+    vertical-align: middle;
+
+    margin: 13px 13px 13px 10px;
+    height: 24px;
+    width: 24px;
+
+    background-color: var(--primary-white-color);  
+}
